esp32cam/log.txt
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c: In function 'init_camera':
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:25:22: error: 'CAM_PIN_PWDN' undeclared (first use in this function)
   25 |         .pin_pwdn  = CAM_PIN_PWDN,
      |                      ^~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:25:22: note: each undeclared identifier is reported only once for each function it appears in
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:26:22: error: 'CAM_PIN_RESET' undeclared (first use in this function)
   26 |         .pin_reset = CAM_PIN_RESET,
      |                      ^~~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:27:21: error: 'CAM_PIN_XCLK' undeclared (first use in this function)
   27 |         .pin_xclk = CAM_PIN_XCLK,
      |                     ^~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:28:25: error: 'CAM_PIN_SIOD' undeclared (first use in this function)
   28 |         .pin_sccb_sda = CAM_PIN_SIOD,
      |                         ^~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:29:25: error: 'CAM_PIN_SIOC' undeclared (first use in this function)
   29 |         .pin_sccb_scl = CAM_PIN_SIOC,
      |                         ^~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:31:19: error: 'CAM_PIN_D7' undeclared (first use in this function)
   31 |         .pin_d7 = CAM_PIN_D7,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:32:19: error: 'CAM_PIN_D6' undeclared (first use in this function)
   32 |         .pin_d6 = CAM_PIN_D6,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:33:19: error: 'CAM_PIN_D5' undeclared (first use in this function)
   33 |         .pin_d5 = CAM_PIN_D5,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:34:19: error: 'CAM_PIN_D4' undeclared (first use in this function)
   34 |         .pin_d4 = CAM_PIN_D4,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:35:19: error: 'CAM_PIN_D3' undeclared (first use in this function)
   35 |         .pin_d3 = CAM_PIN_D3,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:36:19: error: 'CAM_PIN_D2' undeclared (first use in this function)
   36 |         .pin_d2 = CAM_PIN_D2,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:37:19: error: 'CAM_PIN_D1' undeclared (first use in this function)
   37 |         .pin_d1 = CAM_PIN_D1,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:38:19: error: 'CAM_PIN_D0' undeclared (first use in this function)
   38 |         .pin_d0 = CAM_PIN_D0,
      |                   ^~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:39:22: error: 'CAM_PIN_VSYNC' undeclared (first use in this function)
   39 |         .pin_vsync = CAM_PIN_VSYNC,
      |                      ^~~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:40:21: error: 'CAM_PIN_HREF' undeclared (first use in this function)
   40 |         .pin_href = CAM_PIN_HREF,
      |                     ^~~~~~~~~~~~
/home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/main/main.c:41:21: error: 'CAM_PIN_PCLK' undeclared (first use in this function)
   41 |         .pin_pclk = CAM_PIN_PCLK,
      |                     ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
ninja failed with exit code 1, output of the command is in the /home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/build/log/idf_py_stderr_output_56564 and /home/nanachanuwu/CODE_LEARN_CODE_BLOCK/VXL/VIXULI/esp32cam/build/log/idf_py_stdout_output_56564